--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link type="text/css" href="style.css" rel="stylesheet" />    
   <meta charset="utf-8">
   <title>MY FIRST SITE</title>
   <meta name="description" content="MY FIRST SITE DESCRIPTION">
   <meta name="author" content="MY NAME">
 </head>
-<body>
-  <h1>Welcome!</h1>
-  <p>This is my first web-page!</p>
+<body id="fon">
+      <div class="fantasy">
+        <a href="writers.html" class="button1">Fantasy</a>
+          <<h6>Some text</h6>
+      </div>
 </body>
 </html>
