create main page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
   <meta name="description" content="MY FIRST SITE DESCRIPTION">
   <meta name="author" content="MY NAME">
 </head>
-<body id="fon">
-      <div class="fantasy">
-        <a href="writers.html" class="button1">Fantasy</a>
-          <<h6>Some text</h6>
-      </div>
+<body>
+        <ul>
+            <li><a class="active" target="_blank" href="writers.html">Список письменників</a></li>
+        </ul>
+     <div class="container">
+        <div class="item">
+            <p><b><font color="#9B500E" size="30px">Фентезі</font></b><font color="black">- літературний жанр фантастичної літератури, дія якого відбувається у вигаданому світі, де чудеса і вигадка нашого світу є реальністю.
+                    Магія й інші надприродні явища не обов'язково повинні бути головними елементами сюжету, теми чи місця дії, проте в будь-якому випадку вони присутні у творі як частина картини світу. 
+                    Багато історій цього жанру відбуваються у вигаданих світах, де чари є звичною справою. Як правило, від наукової фантастики і літератури жахів фентезі відрізняється відсутністю (псевдо)-наукових та макабричних тем, хоча усі три жанри мають багато спільного.
+                    У популярній культурі переважає умовно середньовічна форма жанру фентезі, особливо після всесвітнього успіху трилогії «Володар Перснів» Дж. Р. Р. Толкіна. 
+                    Проте в ширшому, вульгарному розмовному значенні фентезійний жанр включає в себе твори багатьох письменників, художників, кінорежисерів і музикантів — починаючи від стародавніх міфів та легенд і закінчуючи сучасними творами, популярними серед широкого загалу.</font></p>
+        </div>     
+    </div> 
 </body>
 </html>
