new files created

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="MY FIRST SITE DESCRIPTION">
   <meta name="author" content="MY NAME">
 </head>
-<body>
-        <ul>
-            <li><a class="active" target="_blank" href="writers.html">Список письменників</a></li>
+<body id="index">
+        <ul class="main">
+            <li class="active"><a class="active" target="_blank" href="writers.html">Список письменників</a></li>
         </ul>
      <div class="container">
         <div class="item">
