--- a/writers.html
+++ b/writers.html
@@ -1,8 +1,61 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Письменники</title>
 
+<!doctype html>
+<html lang="en">
+<head>
+  <link type="text/css" href="style.css" rel="stylesheet" />    
+  <meta charset="utf-8">
+  <title>writers</title>
+  <meta name="writers" content="info">
 </head>
+<body id="writersBody">
+    <table id="writers">
+		<tr class="writer">
+			<th class="image img_Martin">
+				<img src="./images/Martin.jpg" width="300" height="250">
+			</th>
+			<th class="content cont_Martin">
+					<input type="checkbox" id="hd-1" class="hide"/>
+					<label for="hd-1" >More...</label>
+					<div>
+							Джордж Мартін.
+							*20 вересня 1948
+							<a target="_blank" href="Martin.html">more information</a>
+					</div>
+			</th>
+		</tr>
+		<tr class="writer">
+				<th class="image img_Martin">
+					<img src="./images/Robert_Jordan.jpg" width="300" height="300">
+				</th>
+				<th class="content cont_Martin">
+					Some content
+				</th>
+			</tr>
+		<tr class="writer">
+					<th class="image img_Martin">
+						<img src="./images/Sapkovsky.png" width="300" height="300">
+					</th>
+					<th class="content cont_Martin">
+						Some content
+					</th>
+		</tr>
+		<tr class="writer">
+				<th class="image img_Martin">
+					<img src="./images/Tolkin.jpg" width="300" height="300">
+				</th>
+				<th class="content cont_Martin">
+					Some content
+				</th>
+		</tr>
+		<tr class="writer">
+				<th class="image img_Martin">
+					<img src="./images/Zhelyazny.jpg" width="300" height="300">
+				</th>
+				<th class="content cont_Martin">
+					Some content
+				</th>
+		</tr>
+			
+	</table>
+</body>
 </html>
