--- a/writers.html
+++ b/writers.html
@@ -10,49 +10,53 @@
 <body id="writersBody">
     <table id="writers">
 		<tr class="writer">
-			<th class="image img_Martin">
+			<th class="image">
 				<img src="./images/Martin.jpg" width="300" height="250">
 			</th>
-			<th class="content cont_Martin">
-					<input type="checkbox" id="hd-1" class="hide"/>
-					<label for="hd-1" >More...</label>
-					<div>
-							Джордж Мартін.
-							*20 вересня 1948
-							<a target="_blank" href="Martin.html">more information</a>
-					</div>
+			<th class="content">
+				Джордж Мартін
+				<hr> 	
+				<a target="_blank" href="Martin.html">more information</a>
 			</th>
 		</tr>
 		<tr class="writer">
-				<th class="image img_Martin">
+				<th class="image">
 					<img src="./images/Robert_Jordan.jpg" width="300" height="300">
 				</th>
-				<th class="content cont_Martin">
-					Some content
+				<th class="content">
+					Роберт Джордан
+					<hr>
+					<a target="_blank" href="Jordan.html">more information</a>
 				</th>
 			</tr>
 		<tr class="writer">
-					<th class="image img_Martin">
+					<th class="image">
 						<img src="./images/Sapkovsky.png" width="300" height="300">
 					</th>
-					<th class="content cont_Martin">
-						Some content
+					<th class="content">
+						Анджей Сапковський
+						<hr>
+						<a target="_blank" href="Sapkovsky.html">more information</a>
 					</th>
 		</tr>
 		<tr class="writer">
-				<th class="image img_Martin">
+				<th class="image">
 					<img src="./images/Tolkin.jpg" width="300" height="300">
 				</th>
-				<th class="content cont_Martin">
-					Some content
+				<th class="content">
+					Джон Толкін
+					<hr>
+					<a target="_blank" href="Tolkien.html">more information</a>
 				</th>
 		</tr>
 		<tr class="writer">
-				<th class="image img_Martin">
-					<img src="./images/Zhelyazny.jpg" width="300" height="300">
+				<th class="image">
+					<img src="./images/Zelazny.jpg" width="300" height="300">
 				</th>
-				<th class="content cont_Martin">
-					Some content
+				<th class="content">
+					Роджер Желязни
+					<hr>
+					<a target="_blank" href="Zelazny.html">more information</a>
 				</th>
 		</tr>
 			
